--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,5 @@
 /* global */
 :root {
-    
-    --cart-set-gap:24px;
-    --card-bottom-margin:48px;
-    
     --text--: #434455; 
     --dark--: #2E2F42;
     --modal-ovarlay--: rgba(46,47,66,40);
@@ -84,12 +80,12 @@ button {
 /* Header styles */
 .header {
     border-bottom: 1px solid var(--accent--);
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .section-header {
     display: flex;
     justify-content: space-between;
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 .logo {
     font-family:"Raleway";
@@ -144,8 +140,6 @@ button {
 /* footer styles */
 .footer  {
     background: var(--dark--);
-}
-.section-footer { 
     padding-top: 100px;
     padding-bottom: 100px;
 }
@@ -169,12 +163,10 @@ button {
 
 
 /* hero section main page*/
-.section-hero {
-    padding-top: 188px;
-    padding-bottom: 188px;
-}
 .hero-section {
     background:var(--dark--);
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 .slogan {
     font-weight: 700;
@@ -205,7 +197,7 @@ button {
 
 
 /* features section */
-.section-features {
+.features {
     padding-top: 120px;
     padding-bottom: 120px;
 }
@@ -235,7 +227,7 @@ button {
 
 
 /* section services style */
-.section-service  {
+.service  {
     padding-bottom: 120px;
 }
 .service-title {
@@ -262,7 +254,7 @@ button {
 
 
 /* section "team" */
-.container-team {
+.team {
     padding-bottom: 120px;
     padding-top: 120px;
 }
@@ -295,7 +287,6 @@ button {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-
 }
 .work-position {
     letter-spacing: 0.02em;
@@ -321,7 +312,6 @@ button {
     justify-content: center;
     margin-top: 96px ;
     margin-bottom: 72px;
-    
 }
 .radiobutton-list:not(:last-child) {
     margin-right: 24px;
@@ -348,16 +338,13 @@ button {
     flex-basis: calc((100% - 48px) / 3);
 }
 .portfolio-card {
-    padding:32px 0px;
+    padding:32px 16px 32px;
     border-left: 1px solid var(--accent--);
     border-bottom: 1px solid var(--accent--);
     border-right: 1px solid var(--accent--);
-    
-
 }
 .portfolio-subtitle {
     margin-bottom: 8px;
-    padding-left:16px;
     font-weight: 500;
     color: var(--dark--);
     font-size: 20px;
@@ -365,7 +352,6 @@ button {
     letter-spacing: 0.02em;
 }
 .portfolio-desc {
-    padding-left:16px;
     color: var(--text--);
     letter-spacing: 0.02em;
     line-height: 1.5;
